--- a/index.html
+++ b/index.html
@@ -298,14 +298,14 @@
             <div class="work-box">
               <a href="/projects/zeusbot/">
                 <div class="work-img">
-                  <img src="https://via.placeholder.com/960x600" alt="" class="img-fluid">
+                  <img src="https://i.imgur.com/kYdst17.png" alt="" class="img-fluid">
                 </div>
                 <div class="work-content">
                   <div class="row">
                     <div class="col-sm-8">
                       <h2 class="w-title">Zeus Bot</h2>
                       <div class="w-more">
-                        <span class="w-ctegory">Project Category</span> / <span class="w-date">1 June. 2020</span>
+                        <span class="w-ctegory">Discord Bot</span> / <span class="w-date">1 June. 2020</span>
                       </div>
                     </div>
                     <div class="col-sm-4">
@@ -319,7 +319,7 @@
             <div class="work-box">
               <a href="/projects/">
                 <div class="work-img">
-                  <img src="https://via.placeholder.com/960x600" alt="" class="img-fluid">
+                  <img src="https://i.imgur.com/4KkfJNm.png" alt="" class="img-fluid">
                 </div>
                 <div class="work-content">
                   <div class="row">
@@ -421,7 +421,7 @@
           <div class="col-md-4">
             <div class="card card-blog">
               <div class="card-img">
-                <a href="blog-single.html"><img src="https://via.placeholder.com/1000x666" alt="" class="img-fluid"></a>
+                <a href="blog-single.html"><img src="https://i.imgur.com/uvkv5NM.gif" alt="" class="img-fluid"></a>
               </div>
               <div class="card-body">
                 <div class="card-category-box">
@@ -452,7 +452,7 @@
           <div class="col-md-4">
             <div class="card card-blog">
               <div class="card-img">
-                <a href="blog-single.html"><img src="https://via.placeholder.com/1000x666" alt="" class="img-fluid"></a>
+                <a href="blog-single.html"><img src="https://i.imgur.com/kYdst17.png" alt="" class="img-fluid"></a>
               </div>
               <div class="card-body">
                 <div class="card-category-box">
@@ -483,7 +483,7 @@
           <div class="col-md-4">
             <div class="card card-blog">
               <div class="card-img">
-                <a href="blog-single.html"><img src="https://via.placeholder.com/1000x666" alt="" class="img-fluid"></a>
+                <a href="blog-single.html"><img src="https://i.imgur.com/4KkfJNm.png" alt="" class="img-fluid"></a>
               </div>
               <div class="card-body">
                 <div class="card-category-box">
