--- a/projects/passwordgenerator/index.html
+++ b/projects/passwordgenerator/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Kaptian Core Blog - Blog Name</title>
+  <title>Kaptian Core Blog - Password Generator</title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
 
