Change Favicon To Work On Every Page And Easy To Swap Out, Finished Password Gen Blog Page

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/kaptiancorelogo.jpg" rel="icon">
-  <link href="assets/img/kaptiancorelogo.jpg" rel="apple-touch-icon">
+  <link href="/assets/img/logo.jpg" rel="icon">
+  <link href="/assets/img/logo.jpg" rel="apple-touch-icon">
   <script src="https://code.iconify.design/1/1.0.6/iconify.min.js"></script>
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/iconify.min.css" rel="stylesheet">
