--- a/projects/ggsmc/index.html
+++ b/projects/ggsmc/index.html
@@ -10,8 +10,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="/assets/img/favicon.png" rel="icon">
-  <link href="/assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="/assets/img/logo.jpg" rel="icon">
+  <link href="/assets/img/logo.jpg" rel="apple-touch-icon">
 
   <!-- Vendor CSS Files -->
   <link href="/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -150,28 +150,6 @@
             </div>
           </div>
           <div class="col-md-4">
-            <div class="widget-sidebar">
-              <h5 class="sidebar-title">Recent Post</h5>
-              <div class="sidebar-content">
-                <ul class="list-sidebar">
-                  <li>
-                    <a href="#">Recent Post 1</a>
-                  </li>
-                  <li>
-                    <a href="#">Recent Post 2</a>
-                  </li>
-                  <li>
-                    <a href="#">Recent Post 3</a>
-                  </li>
-                  <li>
-                    <a href="#">Recent Post 4</a>
-                  </li>
-                  <li>
-                    <a href="#">Recent Post 5</a>
-                  </li>
-                </ul>
-              </div>
-            </div>
             <div class="widget-sidebar widget-tags">
               <h5 class="sidebar-title">Tags</h5>
               <div class="sidebar-content">
