--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
     </section>
     <!-- End Portfolio Section -->
     <!-- ======= Blog Section ======= -->
-    <section id="blog" class="blog-mf sect-pt4 route">
+    <!-- <section id="blog" class="blog-mf sect-pt4 route">
       <div class="container">
         <div class="row">
           <div class="col-sm-12">
@@ -511,7 +511,7 @@
           </div>
         </div>
       </div>
-    </section><!-- End Blog Section -->
+    </section>End Blog Section -->
 
     <!-- ======= Contact Section ======= -->
     <section class="paralax-mf footer-paralax bg-image sect-mt4 route" style="background-image: url(assets/img/overlay-bg.jpg)">
