--- a/projects/ggsmc/index.html
+++ b/projects/ggsmc/index.html
@@ -107,45 +107,23 @@
                   </li>
                   <li>
                     <span class="ion-pricetag"></span>
-                    <a>Category</a>
+                    <a>Game Server</a>
                   </li>
                 </ul>
               </div>
               <div class="article-content">
                 <p>
-                  Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Cras ultricies ligula sed magna dictum
-                  porta. Quisque velit
-                  nisi, pretium ut lacinia in, elementum id enim. Praesent sapien massa, convallis a pellentesque
-                  nec, egestas non nisi. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere
-                  cubilia Curae; Donec velit neque, auctor sit amet aliquam vel, ullamcorper sit amet ligula.
-                  Nulla quis lorem ut libero malesuada feugiat.
+                  The Minecraft Server For The <a href="https://ggs.sx" target="_blank">Gentlemans Gaming Society (GGS)</a>
+                  An SMP (Survival Multi-player) Server, Developed By Chills & I, With Low Player Count, I was busy with things 
+                  but in the upcoming break I'll be working on the server quite alot with new updates. Check the <a href="https://trello.com/b/tuQz0Yw8/ggssx-minecraft-server" target="_blank">Development Trello</a>
+                  to see planned features and in progress things. 
                 </p>
-                <p>
+                <!-- <p>
                   Nulla porttitor accumsan tincidunt. Cras ultricies ligula sed magna dictum porta. Mauris blandit
                   aliquet elit, eget tincidunt
                   nibh pulvinar a. Cras ultricies ligula sed magna dictum porta. Lorem ipsum dolor sit amet,
                   consectetur adipiscing elit. Donec sollicitudin molestie malesuada.
-                </p>
-                <p>
-                  Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Lorem ipsum dolor sit amet, consectetur
-                  adipiscing elit. Praesent
-                  sapien massa, convallis a pellentesque nec, egestas non nisi. Lorem ipsum dolor sit amet,
-                  consectetur adipiscing elit. Curabitur arcu erat, accumsan id imperdiet et, porttitor at
-                  sem. Donec rutrum congue leo eget malesuada.
-                </p>
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quis lorem ut libero malesuada feugiat.
-                  Curabitur arcu erat,
-                  accumsan id imperdiet et, porttitor at sem. Vivamus suscipit tortor eget felis porttitor
-                  volutpat. Vivamus suscipit tortor eget felis porttitor volutpat. Quisque velit nisi, pretium
-                  ut lacinia in, elementum id enim.
-                </p>
-                <p>
-                  Nulla porttitor accumsan tincidunt. Cras ultricies ligula sed magna dictum porta. Mauris blandit
-                  aliquet elit, eget tincidunt
-                  nibh pulvinar a. Cras ultricies ligula sed magna dictum porta. Lorem ipsum dolor sit amet,
-                  consectetur adipiscing elit. Donec sollicitudin molestie malesuada.
-                </p>
+                </p> -->
               </div>
             </div>
           </div>
@@ -155,22 +133,13 @@
               <div class="sidebar-content">
                 <ul>
                   <li>
-                    <a>Tag 1</a>
+                    <a>Minecraft</a>
                   </li>
                   <li>
-                    <a>Tag 2</a>
+                    <a>GGS.SX</a>
                   </li>
                   <li>
-                    <a>Tag 3</a>
-                  </li>
-                  <li>
-                    <a>Tag 4</a>
-                  </li>
-                  <li>
-                    <a>Tag 5</a>
-                  </li>
-                  <li>
-                    <a>Tag 6</a>
+                    <a>Gaming</a>
                   </li>
                 </ul>
               </div>
