--- a/index.html
+++ b/index.html
@@ -399,12 +399,12 @@
               </a>
             </div> -->
           </div>
-
         </div>
       </div>
     </section>
     <!-- End Portfolio Section -->
     <!-- ======= Blog Section ======= -->
+    <!-- Blog Section Will Be Uncommented When I Have More Blog Posts As I Don't Want Projects To Be "Blogs" -->
     <!-- <section id="blog" class="blog-mf sect-pt4 route">
       <div class="container">
         <div class="row">
