--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
   <title>Kaptian Core DevFolio</title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-176561184-2"></script>
+  <script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'UA-176561184-2');
+</script>
+
 
   <!-- Favicons -->
   <link href="/assets/img/logo.jpg" rel="icon">
