--- a/projects/ggsmc/index.html
+++ b/projects/ggsmc/index.html
@@ -4,7 +4,14 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-176561184-2"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'UA-176561184-2');
+  </script>
   <title>Kaptian Core - GGS Minecraft</title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
