--- a/projects/zeusbot/index.html
+++ b/projects/zeusbot/index.html
@@ -7,8 +7,15 @@
 
   <title>Kaptian Core Blog - Blog Name</title>
   <meta content="" name="descriptison">
-  <meta content="" name="keywords">
-
+  <meta content="" name="keywords">  
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-176561184-2"></script>
+  <script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'UA-176561184-2');
+</script>
   <!-- Favicons -->
   <link href="/assets/img/logo.jpg" rel="icon">
   <link href="/assets/img/logo.jpg" rel="apple-touch-icon">
